--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,25 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.15)
 project(Chess)
 
-# Set compiler flags
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wextra -pedantic -pedantic-errors -g")
+set(CMAKE_CXX_STANDARD 14)
 
-include_directories("./include")
+include_directories(include)
+include_directories(src)
 
 set(SOURCE_FILES
-        ./src/Bishop.cpp
-        ./src/King.cpp
-        ./src/Knight.cpp
-        ./src/Pawn.cpp
-        ./src/Queen.cpp
-        ./src/Rook.cpp
-        )
+        include/Bishop.h
+        include/King.h
+        include/Knight.h
+        include/Pawn.h
+        include/Piece.h
+        include/Queen.h
+        include/Rook.h
+        src/Bishop.cpp
+        src/King.cpp
+        src/Knight.cpp
+        src/Pawn.cpp
+        src/Queen.cpp
+        src/Rook.cpp)
+
 add_executable(Chess ${SOURCE_FILES})
+
